added some new notebooks and modified environment

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sediment Mechanics Demonstration Notebooks\n",
-    "- [Sediment Concentration from USGS Station](Sediment%20Concentration%20from%20USGS%20Station.ipynb)"
+    "<img src=\"stream.jpg\" width=\"300\">\n",
+    "\n",
+    "# Sediment Mechanics Demonstration Notebooks\n",
+    "- [Sediment Concentration from USGS Station](Sediment%20Concentration%20from%20USGS%20Station.ipynb)\n",
+    "- [Plot Station Data from Map](Plot%20Station%20Data%20from%20Map.ipynb)\n",
+    "- [USGS DEM 1m](USGS%20DEM%201m.ipynb)\n",
+    "- [USGS 3DEP LIDAR](USGS%203DEP%20LIDAR.ipynb)"
    ]
   }
  ],
