added WMS notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -10,7 +10,8 @@
     "- [Sediment Concentration from USGS Station](Sediment%20Concentration%20from%20USGS%20Station.ipynb)\n",
     "- [Plot Station Data from Map](Plot%20Station%20Data%20from%20Map.ipynb)\n",
     "- [USGS DEM 1m](USGS%20DEM%201m.ipynb)\n",
-    "- [USGS 3DEP LIDAR](USGS%203DEP%20LIDAR.ipynb)"
+    "- [USGS 3DEP LIDAR](USGS%203DEP%20LIDAR.ipynb)\n",
+    "- [USGS WMS Services](USGS%20WMS%20Services.ipynb)"
    ]
   }
  ],
