--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "<img src=\"stream.jpg\" width=\"300\">\n",
     "\n",
-    "# Sediment Mechanics Demonstration Notebooks\n",
+    "# River Mechanics Demonstration Notebooks\n",
+    "- [Regression Curves for Total Suspended Sediment and Sand](Regression%20Curves%20for%20Total%20Suspended%20Sediment%20and%20Sand.ipynb)\n",
+    "- [Stage and Flow Duration Curves](Stage%20and%20Flow%20Duration%20Curves.ipynb)\n",
     "- [Sediment Concentration from USGS Station](Sediment%20Concentration%20from%20USGS%20Station.ipynb)\n",
     "- [Plot Station Data from Map](Plot%20Station%20Data%20from%20Map.ipynb)\n",
     "- [USGS DEM 1m](USGS%20DEM%201m.ipynb)\n",
@@ -31,7 +33,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   },
   "toc": {
    "base_numbering": 1,
