Added Specific Gage Analysis notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,6 +7,7 @@
     "<img src=\"stream.jpg\" width=\"300\">\n",
     "\n",
     "# River Mechanics Demonstration Notebooks\n",
+    "- [Specific Gage Analysis](Specific%20Gage%20Analysis.ipynb)\n",
     "- [Regression Curves for Total Suspended Sediment and Sand](Regression%20Curves%20for%20Total%20Suspended%20Sediment%20and%20Sand.ipynb)\n",
     "- [Stage and Flow Duration Curves](Stage%20and%20Flow%20Duration%20Curves.ipynb)\n",
     "- [Sediment Concentration from USGS Station](Sediment%20Concentration%20from%20USGS%20Station.ipynb)\n",
@@ -33,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
