--- a/Plot Station Data from Map.ipynb
+++ b/Plot Station Data from Map.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective\n",
+    "\n",
+    "Provide a map of current and historic gaging stations and plot data for a selected station. The individual sites will be shown as blue markers once you zoom into the area of intest. Hovering over a marker provides the station name and USGS site number. Clicking on the marker will plot available discharge and sediment concentration data. Note that for now the data is being pulled from the sediment portal, which doesn't have all the station data. Thus, some stations may not plot any information even though the USGS site information shows the site as having data available."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9746bb033e29487c9d23778484d994b3",
+       "model_id": "9368ea98f1cf4a5fa7459ea9872200f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4241765f6c4d718c80a042228a38b3",
+       "model_id": "e3109a623e8740b98945b5057a77e6fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99bb508dec584500a2e1f206fa5a6751",
+       "model_id": "43d2ce2f9072411f93539f8ee70b3d10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,10 +310,12 @@
     "            (ncomments, comments) = get_comments('daily_data.tsv')\n",
     "            f = pandas.read_table(zipfile.open('daily_data.tsv'),header=ncomments).dropna(axis=1,how='all')\n",
     "            f.datetime = pandas.to_datetime(f.datetime)\n",
+    "            print(f.head())\n",
     "            ax0.plot(f.datetime,f.DAILY_FLOW)\n",
     "            ax1.scatter(f.DAILY_FLOW,f.DAILY_SSC)\n",
     "            ax0.set_ylabel('Discharge [cfs]')\n",
     "            ax0.set_xlabel('Date')\n",
+    "            ax0.set_title(\"Daily Discharge Data\")\n",
     "            ax1.set_xlabel('Discharge [cfs]')\n",
     "            ax1.set_ylabel('Sediment(SSC) [mg/l]')\n",
     "            ax1.set_title(\"Daily Sediment Data\")\n",
@@ -313,9 +324,9 @@
     "            (ncomments, comments) = get_comments('discrete_data.tsv')\n",
     "            f = pandas.read_table(zipfile.open('discrete_data.tsv'),header=ncomments).dropna(axis=1,how='all')\n",
     "            f.DATETIME = pandas.to_datetime(f.DATETIME)\n",
+    "            print(f.head())\n",
     "            try:\n",
     "                ax0.plot(f.DATETIME,f.INSTFLOW)\n",
-    "                #ax1.scatter(f.INSTFLOW,f.SSC)\n",
     "            except:\n",
     "                #print(\"inst flow failed\")\n",
     "                pass\n",
@@ -327,8 +338,9 @@
     "                        ssc[i] = float(ssci[2:])\n",
     "                    else:\n",
     "                        ssc[i] = float(ssci)\n",
-    "                p63 = np.zeros(f.P63.shape,'d')\n",
-    "                if 'P63' in f.columns:                \n",
+    "                ax1.scatter(f.DAILYFLOW,ssc)\n",
+    "                if 'P63' in f.columns:    \n",
+    "                    p63 = np.zeros(f.P63.shape,'d')\n",
     "                    for i,p63i in enumerate(f.P63):\n",
     "                        if type(p63i) is not float:\n",
     "                            if 'A' in p63i:\n",
@@ -337,15 +349,13 @@
     "                                p63[i] = float(p63i)\n",
     "                        else:\n",
     "                            p63[i] = p63i\n",
-    "                ax1.scatter(f.DAILYFLOW,ssc)\n",
-    "                ax1.scatter(f.DAILYFLOW,p63)\n",
+    "                    ax1.scatter(f.DAILYFLOW,p63)               \n",
     "            except:\n",
     "                #print(\"daily flow data failed\")\n",
     "                pass\n",
+    "            ax0.set_title(\"Discrete Discharge\")\n",
     "            ax0.set_ylabel('Discharge [cfs]')\n",
     "            times = np.array(f.DATETIME)\n",
-    "            #ax0.set_title(\"Time Period {0}-{1}\".format(str(f.DATETIME[0]),str(times[-1])))\n",
-    "            #ax0.get_xaxis().set_visible(False)\n",
     "            ax1.set_xlabel('Discharge [cfs]')\n",
     "            ax1.set_ylabel('Sediment(SSC) [mg/l]')\n",
     "            ax1.set_title(\"Discrete Sediment Data\")\n",
