--- a/USGS 3DEP LIDAR.ipynb
+++ b/USGS 3DEP LIDAR.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective\n",
+    "\n",
+    "Plot LIDAR data sets from the USGS 3DEP program."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
