--- a/USGS DEM 1m.ipynb
+++ b/USGS DEM 1m.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective\n",
+    "\n",
+    "Download and plot 1m DEM data from the USGS 3DEP program's 1m DEM database."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
