--- a/USGS WMS Services.ipynb
+++ b/USGS WMS Services.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective \n",
+    "\n",
+    "Explore available map layers from the USGS WMS services."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -259,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   },
   "toc": {
    "base_numbering": 1,
