--- a/index.ipynb
+++ b/index.ipynb
@@ -7,6 +7,8 @@
     "<img src=\"stream.jpg\" width=\"300\">\n",
     "\n",
     "# River Mechanics Demonstration Notebooks\n",
+    "\n",
+    "These note books provide examples of various types of analysis suitable for understanding river mechanics. Since obtaining the relevant data is part of that analysis, some of the notebooks focus specifically on obtaining and plotting information from pubic databases provided by the USGS.\n",
     "- [Specific Gage Analysis](Specific%20Gage%20Analysis.ipynb)\n",
     "- [Regression Curves for Total Suspended Sediment and Sand](Regression%20Curves%20for%20Total%20Suspended%20Sediment%20and%20Sand.ipynb)\n",
     "- [Stage and Flow Duration Curves](Stage%20and%20Flow%20Duration%20Curves.ipynb)\n",
@@ -34,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   },
   "toc": {
    "base_numbering": 1,
