--- a/Plot Station Data from Map.ipynb
+++ b/Plot Station Data from Map.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9368ea98f1cf4a5fa7459ea9872200f2",
+       "model_id": "4f7373dbbc2b4450b43bb12eb51acb78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -27,6 +27,38 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  agency_cd  site_no   datetime  DAILY_FLOW DAILY_FLOW_QUAL  DAILY_SSC  \\\n",
+      "0      USGS  7010000 1861-01-01       25200               A        NaN   \n",
+      "1      USGS  7010000 1861-01-02       27400               A        NaN   \n",
+      "2      USGS  7010000 1861-01-03       27400               A        NaN   \n",
+      "3      USGS  7010000 1861-01-04       27400               A        NaN   \n",
+      "4      USGS  7010000 1861-01-05       29000               A        NaN   \n",
+      "\n",
+      "  DAILY_SSC_QUAL  DAILY_SSL DAILY_SSL_QUAL  \n",
+      "0            NaN        NaN            NaN  \n",
+      "1            NaN        NaN            NaN  \n",
+      "2            NaN        NaN            NaN  \n",
+      "3            NaN        NaN            NaN  \n",
+      "4            NaN        NaN            NaN  \n",
+      "  agency_cd  site_no   datetime  DAILY_FLOW DAILY_FLOW_QUAL  DAILY_SSC  \\\n",
+      "0      USGS  7010000 1861-01-01       25200               A        NaN   \n",
+      "1      USGS  7010000 1861-01-02       27400               A        NaN   \n",
+      "2      USGS  7010000 1861-01-03       27400               A        NaN   \n",
+      "3      USGS  7010000 1861-01-04       27400               A        NaN   \n",
+      "4      USGS  7010000 1861-01-05       29000               A        NaN   \n",
+      "\n",
+      "  DAILY_SSC_QUAL  DAILY_SSL DAILY_SSL_QUAL  \n",
+      "0            NaN        NaN            NaN  \n",
+      "1            NaN        NaN            NaN  \n",
+      "2            NaN        NaN            NaN  \n",
+      "3            NaN        NaN            NaN  \n",
+      "4            NaN        NaN            NaN  \n"
+     ]
     }
    ],
    "source": [
@@ -55,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3109a623e8740b98945b5057a77e6fd",
+       "model_id": "54b1a4eb79804677bb38e7de431a11e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43d2ce2f9072411f93539f8ee70b3d10",
+       "model_id": "92186dbe3f414640902ec5673d5610c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,6 +581,13 @@
     "\n",
     "m.add_layer(marker_cluster);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
