--- a/index.ipynb
+++ b/index.ipynb
@@ -9,6 +9,7 @@
     "# River Mechanics Demonstration Notebooks\n",
     "\n",
     "These note books provide examples of various types of analysis suitable for understanding river mechanics. Since obtaining the relevant data is part of that analysis, some of the notebooks focus specifically on obtaining and plotting information from pubic databases provided by the USGS.\n",
+    "- [Effective Discharge App](Effective%20Discharge%20App.ipynb)\n",
     "- [Specific Gage Analysis](Specific%20Gage%20Analysis.ipynb)\n",
     "- [Regression Curves for Total Suspended Sediment and Sand](Regression%20Curves%20for%20Total%20Suspended%20Sediment%20and%20Sand.ipynb)\n",
     "- [Stage and Flow Duration Curves](Stage%20and%20Flow%20Duration%20Curves.ipynb)\n",
@@ -18,6 +19,13 @@
     "- [USGS 3DEP LIDAR](USGS%203DEP%20LIDAR.ipynb)\n",
     "- [USGS WMS Services](USGS%20WMS%20Services.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
