update effective discharge app

--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -50,12 +50,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9240c4e8af964b56afe4d33ec84f5c82",
+       "model_id": "de78bb8e01464d1ebdce94525ea40fbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +141,7 @@
     "    import numpy as np\n",
     "    import math\n",
     "    global station_zipfile\n",
-    "    # defining the api-endpoint  \n",
+    "    # defining the api-endpoint\n",
     "    URL = \"https://cida.usgs.gov/\"\n",
     "    API_ENDPOINT = \"https://cida.usgs.gov/sediment/data\"\n",
     "    ogcfilter = ET.Element(\"ogc:Filter\",attrib={\"xmlns:ogc\":\"http://www.opengis.net/ogc\"})\n",
@@ -185,7 +187,6 @@
     "                daily_flow_plot.set_ylabel('Discharge [cfs]')\n",
     "                daily_flow_plot.set_xlabel('Date')\n",
     "                daily_flow_plot.set_title('Daily Flow')\n",
-    "                daily_flow_plot.show()\n",
     "                daily_flow = f.DAILY_FLOW\n",
     "        if 'discrete_data.tsv' in station_zipfile.namelist():\n",
     "            (ncomments, comments) = get_comments('discrete_data.tsv')\n",
