update app and environment

--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -57,7 +57,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de78bb8e01464d1ebdce94525ea40fbc",
+       "model_id": "ef3e7c3f4fce4b4080c450e1a2208057",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74a8fc0119d84f0488431620c5d82708",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,6 +84,8 @@
     }
    ],
    "source": [
+    "from tqdm.notebook import tqdm\n",
+    "pbar = tqdm()\n",
     "children = [m,\n",
     "            fig.canvas,\n",
     "            fig_hist.canvas, \n",
@@ -118,6 +134,8 @@
    "outputs": [],
    "source": [
     "def plot_station_daily(site):\n",
+    "    iterable = range(13)\n",
+    "    pbar.reset(total=len(iterable))\n",
     "    site_no=site[0]\n",
     "    fig.suptitle(site[1])\n",
     "    fig_hist.suptitle(site[1])\n",
@@ -156,9 +174,11 @@
     "            'dailyFilter' : ogcfilter_string,\n",
     "            'discreteFilter' : ogcfilter_string\n",
     "           }\n",
-    "    # sending post request and saving response as response object \n",
+    "    # sending post request and saving response as response object\n",
+    "    pbar.update()#1\n",
     "    search = requests.post(url = API_ENDPOINT, data = data)  \n",
     "    download = requests.get(url=URL+search.text)\n",
+    "    pbar.update()#2\n",
     "    station_zipfile = ZipFile(BytesIO(download._content))\n",
     "    def get_comments(filename):\n",
     "        ncomments=0\n",
@@ -173,6 +193,7 @@
     "                else:\n",
     "                    commentline=None\n",
     "        return (ncomments,comments)   \n",
+    "    pbar.update()#3\n",
     "    if station_zipfile.filelist:\n",
     "        has_daily_file=False\n",
     "        if 'daily_data.tsv' in station_zipfile.namelist():\n",
@@ -186,8 +207,12 @@
     "                daily_flow_plot.plot(f.datetime,f.DAILY_FLOW)\n",
     "                daily_flow_plot.set_ylabel('Discharge [cfs]')\n",
     "                daily_flow_plot.set_xlabel('Date')\n",
-    "                daily_flow_plot.set_title('Daily Flow')\n",
+    "                daily_flow_plot.set_title('Daily')\n",
+    "                daily_flow_plot.grid()\n",
     "                daily_flow = f.DAILY_FLOW\n",
+    "            else:\n",
+    "                daily_flow = None\n",
+    "        pbar.update()#4\n",
     "        if 'discrete_data.tsv' in station_zipfile.namelist():\n",
     "            (ncomments, comments) = get_comments('discrete_data.tsv')\n",
     "            f = pandas.read_table(station_zipfile.open('discrete_data.tsv'),header=ncomments)\n",
@@ -201,13 +226,18 @@
     "                daily_flow_plot.set_ylabel('Discharge [cfs]')\n",
     "                daily_flow_plot.set_xlabel('Date')\n",
     "                daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
+    "                daily_flow_plot.grid()\n",
+    "                daily_flow = f.DAILYFLOW\n",
+    "            pbar.update()#5\n",
     "            isfinite = np.isfinite(f.DAILYFLOW)\n",
     "            daily_flow_inst_file = f.DAILYFLOW[isfinite]\n",
     "            if 'DATETIME' in f.columns and 'INSTFLOW' in f.columns:\n",
     "                inst_flow_plot.plot(f.DATETIME,f.INSTFLOW)\n",
-    "                inst_flow_plot.set_title(\"Discrete Discharge\")\n",
+    "                inst_flow_plot.set_title(\"Discrete\")\n",
     "                inst_flow_plot.set_xlabel('Date')\n",
     "                inst_flow_plot.set_ylabel('Discharge [cfs]')\n",
+    "                inst_flow_plot.grid()\n",
+    "            pbar.update()#6\n",
     "            if 'SSC' in f.columns and 'P63' in f.columns and 'INSTFLOW' in f.columns and 'DAILYFLOW' in f.columns:\n",
     "                flow_sand=[]\n",
     "                p63_conc=[]\n",
@@ -233,7 +263,8 @@
     "                        if math.isfinite(dailyi):\n",
     "                            flow_sand.append(dailyi)\n",
     "                        else:\n",
-    "                            flow_sand.append(insti)              \n",
+    "                            flow_sand.append(insti)       \n",
+    "                pbar.update()#7\n",
     "                flow_sand = np.array(flow_sand)\n",
     "                sand = np.array(sand)\n",
     "                p63_con = np.array(p63_conc)\n",
@@ -244,28 +275,31 @@
     "                ssc_plot.set_xlabel('Discharge [cfs]')\n",
     "                ssc_plot.set_ylabel('Sediment [mg/l]')\n",
     "                ssc_plot.set_title(\"Discrete Sediment Data\")\n",
+    "                ssc_plot.grid()\n",
     "                ssc_plot.legend()\n",
-    "                daily_flow = flow_sand\n",
+    "                pbar.update()#8\n",
+    "                #daily_flow = flow_sand\n",
     "                (n,bins,patches) = flow_hist.hist(daily_flow,bins=25)\n",
     "                flow_hist.set_ylabel('Incidence')\n",
     "                flow_hist.set_xlabel('Discharge [cfs]');\n",
     "                flow_hist.set_title(\"Flow Frequency\");\n",
     "                annual_frequency = 365.0*n/n.sum()\n",
     "                rep_discharge = 0.5*(bins[0:-1] + bins[1:])\n",
-    "                log_daily_flow = np.log(daily_flow)\n",
+    "                log_daily_flow = np.log10(daily_flow)\n",
     "                (n_log,bins_log,patches_log) = flow_hist_log.hist(log_daily_flow,bins=25)\n",
     "                flow_hist_log.set_ylabel('Incidence')\n",
     "                flow_hist_log.set_xlabel(r'Log Discharge [log(cfs)]');\n",
     "                flow_hist_log.set_title(\"Flow Frequency\");\n",
+    "                pbar.update()#9\n",
     "                annual_frequency_log = 365.0*n_log/n_log.sum()\n",
-    "                discharge_bins = np.exp(bins_log)\n",
+    "                discharge_bins = 10**(bins_log)\n",
     "                rep_discharge_log = 0.5*(discharge_bins[0:-1] + discharge_bins[1:])\n",
     "                from scipy import stats\n",
     "                K=.0027 #conversion factor to get Q_s from discharge and concentration in mg/l\n",
     "                q_sand = flow_sand*sand*K\n",
     "                sand_indeces = np.where(sand > 0.0)\n",
-    "                log_flow_sand = np.log(flow_sand[sand_indeces])\n",
-    "                log_sand = np.log(sand[sand_indeces])\n",
+    "                log_flow_sand = np.log10(flow_sand[sand_indeces])\n",
+    "                log_sand = np.log10(sand[sand_indeces])\n",
     "                sand_pow = stats.linregress(x=log_flow_sand,y=log_sand)\n",
     "                pow = pandas.DataFrame([sand_pow], \n",
     "                       columns=[\"slopes\", \n",
@@ -278,20 +312,23 @@
     "                rating_curve.scatter(log_flow_sand,log_sand,c='b')\n",
     "                rating_curve.plot(log_flow_sand,sand_pow[1]+sand_pow[0]*log_flow_sand,'b')\n",
     "                rating_curve.set_title('Rating Curve')\n",
-    "                rating_curve.set_xlabel(r'Discharge [ln(cfs)]')\n",
-    "                rating_curve.set_ylabel(r'Sediment Concentration [ln(tons/day)]');\n",
+    "                rating_curve.set_xlabel(r'Discharge [log(cfs)]')\n",
+    "                rating_curve.set_ylabel(r'Sand Load [log(tons/day)]');\n",
+    "                rating_curve.grid()\n",
+    "                pbar.update()#10\n",
     "                cumulative_load=[0.0]\n",
     "                discharge=[0.0]\n",
     "                for q,fr in zip(rep_discharge,annual_frequency):\n",
     "                    discharge.append(q)\n",
-    "                    cumulative_load.append(cumulative_load[-1]+fr*math.exp(math.log(q)*sand_pow[0]+sand_pow[1]))\n",
-    "                percent_cumulative_load = [l/cumulative_load[-1] for l in cumulative_load]\n",
+    "                    cumulative_load.append(cumulative_load[-1]+fr*10**(math.log10(q)*sand_pow[0]+sand_pow[1]))\n",
+    "                percent_cumulative_load = [100*l/cumulative_load[-1] for l in cumulative_load]\n",
     "                \n",
     "                eff_discharge.set_xlabel('Discharge[cfs]')\n",
     "                eff_discharge.set_ylabel('Sand Load [tons/year]')\n",
-    "                eff_discharge.plot(rep_discharge, annual_frequency*(np.exp(np.log(rep_discharge)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
+    "                eff_discharge.plot(rep_discharge, annual_frequency*(10**(np.log10(rep_discharge)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
     "                eff_discharge.tick_params(axis='y', labelcolor='tab:red')\n",
-    "                \n",
+    "                eff_discharge.grid()\n",
+    "                pbar.update()#11\n",
     "                cum_discharge.set_ylabel('Cummulative Percent Sand Load', color='tab:blue')  # we already handled the x-label with ax1\n",
     "                cum_discharge.plot(discharge,percent_cumulative_load)\n",
     "                cum_discharge.tick_params(axis='y', labelcolor='tab:blue')\n",
@@ -301,30 +338,37 @@
     "                discharge_log=[0.0]\n",
     "                for q,fr in zip(rep_discharge_log,annual_frequency_log):\n",
     "                    discharge_log.append(q)\n",
-    "                    cumulative_load_log.append(cumulative_load_log[-1]+fr*math.exp(math.log(q)*sand_pow[0]+sand_pow[1]))\n",
-    "                percent_cumulative_load_log = [l/cumulative_load_log[-1] for l in cumulative_load_log]\n",
+    "                    cumulative_load_log.append(cumulative_load_log[-1]+fr*10**(math.log10(q)*sand_pow[0]+sand_pow[1]))\n",
+    "                percent_cumulative_load_log = [100*l/cumulative_load_log[-1] for l in cumulative_load_log]\n",
     "                \n",
     "                eff_discharge_log.set_xlabel('Discharge[cfs]')\n",
     "                eff_discharge_log.set_ylabel('Sand Load [tons/year]')\n",
-    "                eff_discharge_log.plot(rep_discharge_log, annual_frequency_log*(np.exp(np.log(rep_discharge_log)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
+    "                eff_discharge_log.plot(rep_discharge_log, annual_frequency_log*(10**(np.log10(rep_discharge_log)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
     "                eff_discharge_log.tick_params(axis='y', labelcolor='tab:red')\n",
-    "                \n",
+    "                eff_discharge_log.grid()\n",
+    "                pbar.update()#12\n",
     "                cum_discharge_log.set_ylabel('Cummulative Percent Sand Load', color='tab:blue')  # we already handled the x-label with ax1\n",
     "                cum_discharge_log.plot(discharge_log,percent_cumulative_load_log)\n",
+    "                points = np.interp([20,80],percent_cumulative_load_log, discharge_log)\n",
+    "                cum_discharge_log.plot([points[0]],[20],'ro')\n",
+    "                cum_discharge_log.plot([points[1]],[80],'ro')\n",
     "                cum_discharge_log.tick_params(axis='y', labelcolor='tab:blue')\n",
     "                eff_discharge_log.set_title(\"Effective Discharge\")\n",
+    "                pbar.update()#13\n",
     "    else:\n",
-    "        print(station_zipfile.filelist,station_zipfile)\n",
+    "        #print(station_zipfile.filelist,station_zipfile)\n",
     "        fig.suptitle(\"INSUFFICIENT DATA AT {0}\".format(site[1]))\n",
     "        fig_hist.suptitle(\"INSUFFICIENT DATA AT {0}\".format(site[1]))\n",
     "        fig_rating_curve.suptitle(\"INSUFFICIENT DATA AT {0}\".format(site[1]))\n",
     "        fig_eff_discharge.suptitle(\"INSUFFICIENT DATA AT {0}\".format(site[1]))\n",
     "        tab.children[DISCRETE_TAB].children = []\n",
     "        tab.children[DAILY_TAB].children = []\n",
+    "        pbar.reset(0)\n",
     "    fig.canvas.draw()\n",
     "    fig_hist.canvas.draw()\n",
     "    fig_rating_curve.canvas.draw()\n",
-    "    fig_eff_discharge.canvas.draw()\n"
+    "    fig_eff_discharge.canvas.draw()\n",
+    "    \n"
    ]
   },
   {
