updated app to improve plotting, data display, etc.

--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -51,13 +51,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef3e7c3f4fce4b4080c450e1a2208057",
+       "model_id": "f7a5480e57dc44ac8e9f9ef063e9c98e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74a8fc0119d84f0488431620c5d82708",
+       "model_id": "f179243bd87d4d9db9316a77a1b1e86a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,12 +110,158 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>agency_cd</th>\n",
+       "      <th>site_no</th>\n",
+       "      <th>station_nm</th>\n",
+       "      <th>site_tp_cd</th>\n",
+       "      <th>dec_lat_va</th>\n",
+       "      <th>dec_long_va</th>\n",
+       "      <th>coord_acy_cd</th>\n",
+       "      <th>dec_coord_datum_cd</th>\n",
+       "      <th>alt_va</th>\n",
+       "      <th>alt_acy_va</th>\n",
+       "      <th>alt_datum_cd</th>\n",
+       "      <th>huc_cd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>2489500</td>\n",
+       "      <td>Pearl River near Bogalusa, LA</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>30.793243</td>\n",
+       "      <td>-89.820907</td>\n",
+       "      <td>U</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>54.64</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NAVD88</td>\n",
+       "      <td>3180004.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>2490193</td>\n",
+       "      <td>Pearl River at Pools Bluff near Bogalusa, LA</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>30.705833</td>\n",
+       "      <td>-89.846389</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>NAVD88</td>\n",
+       "      <td>3180004.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>2490200</td>\n",
+       "      <td>Pearl River Navigation Canal Lock and Dam No. 3</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>30.638056</td>\n",
+       "      <td>-89.868056</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>33.98</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>NAVD88</td>\n",
+       "      <td>3180004.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>2491500</td>\n",
+       "      <td>Bogue Chitto River at Franklinton, LA</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>30.842962</td>\n",
+       "      <td>-90.162030</td>\n",
+       "      <td>U</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>123.81</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NGVD29</td>\n",
+       "      <td>3180005.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>2492000</td>\n",
+       "      <td>Bogue Chitto River near Bush, LA</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>30.629356</td>\n",
+       "      <td>-89.897296</td>\n",
+       "      <td>U</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>43.31</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>NAVD88</td>\n",
+       "      <td>3180005.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  agency_cd  site_no                                       station_nm  \\\n",
+       "0      USGS  2489500                    Pearl River near Bogalusa, LA   \n",
+       "1      USGS  2490193     Pearl River at Pools Bluff near Bogalusa, LA   \n",
+       "2      USGS  2490200  Pearl River Navigation Canal Lock and Dam No. 3   \n",
+       "3      USGS  2491500            Bogue Chitto River at Franklinton, LA   \n",
+       "4      USGS  2492000                 Bogue Chitto River near Bush, LA   \n",
+       "\n",
+       "  site_tp_cd  dec_lat_va  dec_long_va coord_acy_cd dec_coord_datum_cd  alt_va  \\\n",
+       "0         ST   30.793243   -89.820907            U              NAD83   54.64   \n",
+       "1         ST   30.705833   -89.846389            5              NAD83    0.32   \n",
+       "2         ST   30.638056   -89.868056            5              NAD83   33.98   \n",
+       "3         ST   30.842962   -90.162030            U              NAD83  123.81   \n",
+       "4         ST   30.629356   -89.897296            U              NAD83   43.31   \n",
+       "\n",
+       "   alt_acy_va alt_datum_cd     huc_cd  \n",
+       "0        1.00       NAVD88  3180004.0  \n",
+       "1        0.16       NAVD88  3180004.0  \n",
+       "2        0.20       NAVD88  3180004.0  \n",
+       "3        0.01       NGVD29  3180005.0  \n",
+       "4        0.22       NAVD88  3180005.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests,pandas,io\n",
     "state_data=[]\n",
     "for state in ['la','ms','ar','al','tn','mo']:\n",
-    "    resp = requests.post('https://waterservices.usgs.gov/nwis/site/?format=rdb&stateCd={0}&siteType=ST&siteStatus=active&hasDataTypeCd=iv'.format(state))\n",
+    "    resp = requests.post('https://waterservices.usgs.gov/nwis/site/?format=rdb&stateCd={0}&siteType=ST&siteStatus=active&hasDataTypeCd=dv,iv'.format(state))\n",
+    "    #resp = requests.post('https://waterservices.usgs.gov/nwis/site/?format=rdb&siteType=ST&siteStatus=active&hasDataTypeCd=dv,iv')\n",
+    "    #resp = requests.post('https://waterservices.usgs.gov/nwis/site/?format=rdb&stateCd={0}&parameterCd=80154&siteStatus=active'.format(state))\n",
+    "    #resp = requests.post('https://waterservices.usgs.gov/nwis/site/?format=rdb&stateCd={0}&parameterCd=80154&siteStatus=all&hasDataTypeCd=iv,dv'.format(state))\n",
     "    ncomments=0\n",
     "    for line in resp.text.split('\\n'):\n",
     "        if '#' in line:\n",
@@ -124,7 +270,7 @@
     "            break\n",
     "    state_data.append(pandas.read_table(io.BytesIO(resp._content),comment='#',skiprows=[ncomments+1]))\n",
     "f = pandas.concat(state_data, axis=0)\n",
-    "#f.head()"
+    "f.head()"
    ]
   },
   {
@@ -175,10 +321,10 @@
     "            'discreteFilter' : ogcfilter_string\n",
     "           }\n",
     "    # sending post request and saving response as response object\n",
-    "    pbar.update()#1\n",
+    "    pbar.update(1)\n",
     "    search = requests.post(url = API_ENDPOINT, data = data)  \n",
     "    download = requests.get(url=URL+search.text)\n",
-    "    pbar.update()#2\n",
+    "    pbar.update(2)\n",
     "    station_zipfile = ZipFile(BytesIO(download._content))\n",
     "    def get_comments(filename):\n",
     "        ncomments=0\n",
@@ -193,7 +339,7 @@
     "                else:\n",
     "                    commentline=None\n",
     "        return (ncomments,comments)   \n",
-    "    pbar.update()#3\n",
+    "    pbar.update(3)\n",
     "    if station_zipfile.filelist:\n",
     "        has_daily_file=False\n",
     "        if 'daily_data.tsv' in station_zipfile.namelist():\n",
@@ -201,7 +347,11 @@
     "            (ncomments, comments) = get_comments('daily_data.tsv')\n",
     "            f = pandas.read_table(station_zipfile.open('daily_data.tsv'),header=ncomments)\n",
     "            f.datetime = pandas.to_datetime(f.datetime)\n",
-    "            tab.children[DAILY_TAB].children = [from_dataframe(f)]\n",
+    "            drop_columns = []\n",
+    "            for col in f.columns:\n",
+    "                if col not in ['DAILY_FLOW','datetime']:\n",
+    "                    drop_columns.append(col)\n",
+    "            tab.children[DAILY_TAB].children = [from_dataframe(f.drop(columns=drop_columns))]\n",
     "            #print(f.head())\n",
     "            if 'DAILY_FLOW' in f.columns:\n",
     "                daily_flow_plot.plot(f.datetime,f.DAILY_FLOW)\n",
@@ -212,11 +362,15 @@
     "                daily_flow = f.DAILY_FLOW\n",
     "            else:\n",
     "                daily_flow = None\n",
-    "        pbar.update()#4\n",
+    "        pbar.update(4)\n",
     "        if 'discrete_data.tsv' in station_zipfile.namelist():\n",
     "            (ncomments, comments) = get_comments('discrete_data.tsv')\n",
     "            f = pandas.read_table(station_zipfile.open('discrete_data.tsv'),header=ncomments)\n",
-    "            tab.children[DISCRETE_TAB].children = [from_dataframe(f)]\n",
+    "            drop_columns = []\n",
+    "            for col in f.columns:\n",
+    "                if col not in ['DAILYFLOW','DATETIME','INSTFLOW','SSC','P63']:\n",
+    "                    drop_columns.append(col)\n",
+    "            tab.children[DISCRETE_TAB].children = [from_dataframe(f.drop(columns=drop_columns))]\n",
     "            #for col in f.columns: \n",
     "            #    print(col) \n",
     "            f.DATETIME = pandas.to_datetime(f.DATETIME)\n",
@@ -228,7 +382,7 @@
     "                daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
     "                daily_flow_plot.grid()\n",
     "                daily_flow = f.DAILYFLOW\n",
-    "            pbar.update()#5\n",
+    "            pbar.update(5)\n",
     "            isfinite = np.isfinite(f.DAILYFLOW)\n",
     "            daily_flow_inst_file = f.DAILYFLOW[isfinite]\n",
     "            if 'DATETIME' in f.columns and 'INSTFLOW' in f.columns:\n",
@@ -237,7 +391,7 @@
     "                inst_flow_plot.set_xlabel('Date')\n",
     "                inst_flow_plot.set_ylabel('Discharge [cfs]')\n",
     "                inst_flow_plot.grid()\n",
-    "            pbar.update()#6\n",
+    "            pbar.update(6)\n",
     "            if 'SSC' in f.columns and 'P63' in f.columns and 'INSTFLOW' in f.columns and 'DAILYFLOW' in f.columns:\n",
     "                flow_sand=[]\n",
     "                p63_conc=[]\n",
@@ -264,7 +418,7 @@
     "                            flow_sand.append(dailyi)\n",
     "                        else:\n",
     "                            flow_sand.append(insti)       \n",
-    "                pbar.update()#7\n",
+    "                pbar.update(7)\n",
     "                flow_sand = np.array(flow_sand)\n",
     "                sand = np.array(sand)\n",
     "                p63_con = np.array(p63_conc)\n",
@@ -277,7 +431,7 @@
     "                ssc_plot.set_title(\"Discrete Sediment Data\")\n",
     "                ssc_plot.grid()\n",
     "                ssc_plot.legend()\n",
-    "                pbar.update()#8\n",
+    "                pbar.update(8)\n",
     "                #daily_flow = flow_sand\n",
     "                (n,bins,patches) = flow_hist.hist(daily_flow,bins=25)\n",
     "                flow_hist.set_ylabel('Incidence')\n",
@@ -290,7 +444,7 @@
     "                flow_hist_log.set_ylabel('Incidence')\n",
     "                flow_hist_log.set_xlabel(r'Log Discharge [log(cfs)]');\n",
     "                flow_hist_log.set_title(\"Flow Frequency\");\n",
-    "                pbar.update()#9\n",
+    "                pbar.update(9)\n",
     "                annual_frequency_log = 365.0*n_log/n_log.sum()\n",
     "                discharge_bins = 10**(bins_log)\n",
     "                rep_discharge_log = 0.5*(discharge_bins[0:-1] + discharge_bins[1:])\n",
@@ -309,18 +463,20 @@
     "                          \"std err\"],\n",
     "                       index=['Sand'])\n",
     "                import math\n",
-    "                rating_curve.scatter(log_flow_sand,log_sand,c='b')\n",
-    "                rating_curve.plot(log_flow_sand,sand_pow[1]+sand_pow[0]*log_flow_sand,'b')\n",
+    "                rating_curve.scatter(flow_sand,sand,c='b')\n",
+    "                rating_curve.plot(flow_sand,10**(sand_pow[1]+sand_pow[0]*np.log10(flow_sand)),'b')\n",
     "                rating_curve.set_title('Rating Curve')\n",
-    "                rating_curve.set_xlabel(r'Discharge [log(cfs)]')\n",
-    "                rating_curve.set_ylabel(r'Sand Load [log(tons/day)]');\n",
+    "                rating_curve.set_xlabel(r'Discharge [(cfs)]')\n",
+    "                rating_curve.set_ylabel(r'Sand Load [(tons/day)]');\n",
+    "                rating_curve.set_yscale('log')\n",
+    "                rating_curve.set_xscale('log')\n",
     "                rating_curve.grid()\n",
-    "                pbar.update()#10\n",
+    "                pbar.update(10)\n",
     "                cumulative_load=[0.0]\n",
     "                discharge=[0.0]\n",
     "                for q,fr in zip(rep_discharge,annual_frequency):\n",
     "                    discharge.append(q)\n",
-    "                    cumulative_load.append(cumulative_load[-1]+fr*10**(math.log10(q)*sand_pow[0]+sand_pow[1]))\n",
+    "                    cumulative_load.append(cumulative_load[-1]+fr*10**(np.log10(q)*sand_pow[0]+sand_pow[1]))\n",
     "                percent_cumulative_load = [100*l/cumulative_load[-1] for l in cumulative_load]\n",
     "                \n",
     "                eff_discharge.set_xlabel('Discharge[cfs]')\n",
@@ -328,9 +484,12 @@
     "                eff_discharge.plot(rep_discharge, annual_frequency*(10**(np.log10(rep_discharge)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
     "                eff_discharge.tick_params(axis='y', labelcolor='tab:red')\n",
     "                eff_discharge.grid()\n",
-    "                pbar.update()#11\n",
+    "                pbar.update(11)\n",
     "                cum_discharge.set_ylabel('Cummulative Percent Sand Load', color='tab:blue')  # we already handled the x-label with ax1\n",
     "                cum_discharge.plot(discharge,percent_cumulative_load)\n",
+    "                points = np.interp([20,80],percent_cumulative_load, discharge)\n",
+    "                cum_discharge.plot([points[0]],[20],'ro')\n",
+    "                cum_discharge.plot([points[1]],[80],'ro')\n",
     "                cum_discharge.tick_params(axis='y', labelcolor='tab:blue')\n",
     "                eff_discharge.set_title(\"Effective Discharge\")\n",
     "                \n",
@@ -346,7 +505,7 @@
     "                eff_discharge_log.plot(rep_discharge_log, annual_frequency_log*(10**(np.log10(rep_discharge_log)*sand_pow[0]+sand_pow[1])),color='tab:red')\n",
     "                eff_discharge_log.tick_params(axis='y', labelcolor='tab:red')\n",
     "                eff_discharge_log.grid()\n",
-    "                pbar.update()#12\n",
+    "                pbar.update(12)\n",
     "                cum_discharge_log.set_ylabel('Cummulative Percent Sand Load', color='tab:blue')  # we already handled the x-label with ax1\n",
     "                cum_discharge_log.plot(discharge_log,percent_cumulative_load_log)\n",
     "                points = np.interp([20,80],percent_cumulative_load_log, discharge_log)\n",
@@ -354,7 +513,9 @@
     "                cum_discharge_log.plot([points[1]],[80],'ro')\n",
     "                cum_discharge_log.tick_params(axis='y', labelcolor='tab:blue')\n",
     "                eff_discharge_log.set_title(\"Effective Discharge\")\n",
-    "                pbar.update()#13\n",
+    "                pbar.update(13)\n",
+    "            else:\n",
+    "                pbar.update(13)\n",
     "    else:\n",
     "        #print(station_zipfile.filelist,station_zipfile)\n",
     "        fig.suptitle(\"INSUFFICIENT DATA AT {0}\".format(site[1]))\n",
